# readio-tts

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.gpt.dev.yaml  compose.gpt.yaml  compose.yaml  pyproject.toml  小模型异步长文本合成接口.md
deployment/gpt_sovits/: start-api.sh  tts_infer.yaml
scripts/: extract_csemotions_reference.py
src/readio_tts/: __init__.py  api.py  audio.py  config.py  jobs.py  logging_config.py  models.py  providers.py  repository.py  voices.py  worker.py
tests/: test_api.py  test_audio.py  test_config.py  test_extract_csemotions_reference.py  test_jobs.py  test_providers.py  test_repository.py
